fix text alignment for menu

--- a/src/components/styled/menu.css
+++ b/src/components/styled/menu.css
@@ -18,7 +18,7 @@
   }
   :where(li:not(.menu-title) > *:not(ul):not(details):not(.menu-title)),
   :where(li:not(.menu-title) > details > summary:not(.menu-title)) {
-    @apply px-4 py-2 rounded-btn transition duration-200 ease-in-out;
+    @apply px-4 py-2 rounded-btn transition duration-200 ease-in-out text-left;
   }
 
   :where(li:not(.menu-title):not(.disabled) > *:not(ul):not(details):not(.menu-title)),
